block matrices and DFT 1D

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -236,11 +236,11 @@
     "where $\\mathbf{A}_{\\alpha \\beta}$ and $\\mathbf{B}_{\\beta \\gamma}$ are, respectively, $N_{\\alpha} \\times M_{\\beta}$ and $M_{\\beta} \\times L_{\\gamma}$ submatrices, $\\alpha = 1, \\dots, q$, $\\beta = 1, \\dots, r$, $\\gamma = 1, \\dots, s$,\n",
     "\n",
     "$$\n",
-    "N = \\sum_{\\alpha = 1}^{r} N_{\\alpha} \\: ,\n",
+    "N = \\sum_{\\alpha = 1}^{q} N_{\\alpha} \\: ,\n",
     "$$\n",
     "\n",
     "$$\n",
-    "M = \\sum_{\\beta = 1}^{q} M_{\\beta}\n",
+    "M = \\sum_{\\beta = 1}^{r} M_{\\beta}\n",
     "$$\n",
     "\n",
     "and\n",
@@ -302,6 +302,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This matrix-matrix product can be computed according to the following pseudo-code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    alpha1 = \n",
+    "    alpha2 = \n",
+    "    for alpha = 1:q\n",
+    "        gamma1 = \n",
+    "        gamma2 = \n",
+    "        for gamma = 1:s\n",
+    "            beta1 = \n",
+    "            beta2 = \n",
+    "            for beta = 1:r\n",
+    "                C[alpha1:alpha2, gamma1:gamma2] += matmat(A[alpha1:alpha2, beta1:beta2], \n",
+    "                                                          B[beta1:beta2, gamma1:gamma2])\n",
+    "                beta1 = \n",
+    "                beta2 = \n",
+    "            gamma1 = \n",
+    "            gamma2 =\n",
+    "        alpha1 = \n",
+    "        alpha2 = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's now consider two particular cases. In both cases, the matrices $\\mathbf{B}$ and $\\mathbf{C}$ are replaced by vectors $\\mathbf{b}$ and $\\mathbf{c}$, respectively, as follows:"
    ]
   },
@@ -332,6 +362,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Consider an $N \\times M$ matrix $\\mathbf{A}$ formed by $r$ blocks with $M_{\\beta}$ columns each, $\\beta = 1, \\dots, r$, $M = \\sum\\limits_{\\beta = 1}^{r} M_{\\beta}$. This matrix-vector product can be computed according to the following pseudo-code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    j1 = \n",
+    "    j2 = \n",
+    "    for j = 1:r\n",
+    "        c += matvec(A[:, j1:j2], b[j1:j2])\n",
+    "        j1 = \n",
+    "        j2 = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the next example, the matrix $\\mathbf{A}$ is partitioned into rows and the vector $\\mathbf{c}$ is divided into two vectors:"
    ]
   },
@@ -346,7 +395,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Consider an $N \\times M$ matrix $\\mathbf{A}$ formed by $q$ blocks with $N_{\\alpha}$ rows each, $\\alpha = 1, \\dots, q$, $N = \\sum\\limits_{\\alpha = 1}^{q} N_{\\alpha}$. This matrix-vector product can be computed according to the following pseudo-code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    i1 = \n",
+    "    i2 = \n",
+    "    for i = 1:q\n",
+    "        c += matvec(A[i1:i2, :], b)\n",
+    "        i1 = \n",
+    "        i2 = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise (extra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Determine the indices controlling the slices in the three pseudo-codes given above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
    ]
   },
   {
@@ -389,6 +471,263 @@
     "\\end{bmatrix} \\: .\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If instead of a matrix $\\mathbf{B}$ we have a vector\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{b} = \\tilde{\\mathbf{b}} + i \\, \\breve{\\mathbf{b}} \\: ,\n",
+    "$$\n",
+    "\n",
+    "the relationship given above can be simplified as follows:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "\\tilde{\\mathbf{c}} \\\\\n",
+    "\\breve{\\mathbf{c}}\n",
+    "\\end{bmatrix} =\n",
+    "\\begin{bmatrix}\n",
+    "\\tilde{\\mathbf{A}} & -\\breve{\\mathbf{A}} \\\\\n",
+    "\\breve{\\mathbf{A}} &  \\tilde{\\mathbf{A}}\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "\\tilde{\\mathbf{b}} \\\\\n",
+    "\\breve{\\mathbf{b}}\n",
+    "\\end{bmatrix} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $\\tilde{\\mathbf{c}}$ and $\\breve{\\mathbf{c}}$ are the real and imaginary parts of the resulting vector $\\mathbf{c}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. In your `my_function.py` file, create 2 functions called `matvec_complex` and `matmat_complex` for implementing the 2 relationships given above. Function `matvec_complex` must receive the complex matrix $\\mathbf{A}$ and the complex vector $\\mathbf{b}$ and return the resultant vector $\\mathbf{c}$. Function `matmat_complex` must receive the complex matrices  $\\mathbf{A}$ and $\\mathbf{B}$ and return the resultant matrix $\\mathbf{C}$.\n",
+    "2. In your `test_my_function.py` file, create 2 tests for each function. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example presented below)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dealing with complex arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A_real = 10*np.around(np.random.rand(N,N), decimals=3)\n",
+    "A_imaginary = 10*np.around(np.random.rand(N,N), decimals=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.08, 3.02, 0.1 , 0.5 , 8.22],\n",
+       "       [1.86, 6.69, 1.5 , 9.79, 0.49],\n",
+       "       [4.75, 2.27, 5.66, 0.33, 7.47],\n",
+       "       [6.57, 8.55, 2.71, 9.92, 7.6 ],\n",
+       "       [3.15, 1.76, 2.31, 2.77, 6.98]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.  , 3.08, 0.77, 8.84, 6.41],\n",
+       "       [4.46, 3.37, 6.99, 4.28, 0.14],\n",
+       "       [0.09, 6.51, 9.78, 6.65, 0.5 ],\n",
+       "       [0.41, 4.92, 0.72, 0.08, 7.4 ],\n",
+       "       [7.77, 1.45, 9.32, 8.96, 3.42]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_imaginary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = A_real + 1j*A_imaginary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.08+3.j  , 3.02+3.08j, 0.1 +0.77j, 0.5 +8.84j, 8.22+6.41j],\n",
+       "       [1.86+4.46j, 6.69+3.37j, 1.5 +6.99j, 9.79+4.28j, 0.49+0.14j],\n",
+       "       [4.75+0.09j, 2.27+6.51j, 5.66+9.78j, 0.33+6.65j, 7.47+0.5j ],\n",
+       "       [6.57+0.41j, 8.55+4.92j, 2.71+0.72j, 9.92+0.08j, 7.6 +7.4j ],\n",
+       "       [3.15+7.77j, 1.76+1.45j, 2.31+9.32j, 2.77+8.96j, 6.98+3.42j]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.08, 3.02, 0.1 , 0.5 , 8.22],\n",
+       "       [1.86, 6.69, 1.5 , 9.79, 0.49],\n",
+       "       [4.75, 2.27, 5.66, 0.33, 7.47],\n",
+       "       [6.57, 8.55, 2.71, 9.92, 7.6 ],\n",
+       "       [3.15, 1.76, 2.31, 2.77, 6.98]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.  , 3.08, 0.77, 8.84, 6.41],\n",
+       "       [4.46, 3.37, 6.99, 4.28, 0.14],\n",
+       "       [0.09, 6.51, 9.78, 6.65, 0.5 ],\n",
+       "       [0.41, 4.92, 0.72, 0.08, 7.4 ],\n",
+       "       [7.77, 1.45, 9.32, 8.96, 3.42]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.imag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.08-3.j  , 3.02-3.08j, 0.1 -0.77j, 0.5 -8.84j, 8.22-6.41j],\n",
+       "       [1.86-4.46j, 6.69-3.37j, 1.5 -6.99j, 9.79-4.28j, 0.49-0.14j],\n",
+       "       [4.75-0.09j, 2.27-6.51j, 5.66-9.78j, 0.33-6.65j, 7.47-0.5j ],\n",
+       "       [6.57-0.41j, 8.55-4.92j, 2.71-0.72j, 9.92-0.08j, 7.6 -7.4j ],\n",
+       "       [3.15-7.77j, 1.76-1.45j, 2.31-9.32j, 2.77-8.96j, 6.98-3.42j]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.conjugate(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.08-3.j  , 1.86-4.46j, 4.75-0.09j, 6.57-0.41j, 3.15-7.77j],\n",
+       "       [3.02-3.08j, 6.69-3.37j, 2.27-6.51j, 8.55-4.92j, 1.76-1.45j],\n",
+       "       [0.1 -0.77j, 1.5 -6.99j, 5.66-9.78j, 2.71-0.72j, 2.31-9.32j],\n",
+       "       [0.5 -8.84j, 9.79-4.28j, 0.33-6.65j, 9.92-0.08j, 2.77-8.96j],\n",
+       "       [8.22-6.41j, 0.49-0.14j, 7.47-0.5j , 7.6 -7.4j , 6.98-3.42j]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.conjugate(A).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
