--- a/Content/fourier_1D_2.ipynb
+++ b/Content/fourier_1D_2.ipynb
@@ -262,7 +262,7 @@
     "<a id='eq20c'></a>\n",
     "\n",
     "$$\n",
-    "c_{n} = \\frac{1}{2} \\left( a_{n} + i \\, b_{n} \\right) \\: , \\quad \\text{for} \\:\\: n < 0 \\: , \\tag{20c}\n",
+    "c_{n} \\:\\: \\text{for} \\:\\: n < 0 \\: = \\: c_{n}^{\\ast} \\:\\: \\text{for} \\:\\: n > 0 \\quad . \\tag{20c}\n",
     "$$"
    ]
   },
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "is equal to $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) for $n > 0$. This equation shows that:"
+    "This equation shows that:"
    ]
   },
   {
@@ -552,21 +552,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
