--- a/Content/fourier_1D_1.ipynb
+++ b/Content/fourier_1D_1.ipynb
@@ -702,7 +702,7 @@
    "source": [
     "<a id='ex-extra-intro1'></a>\n",
     "\n",
-    "### Exercise"
+    "### Exercise (extra)"
    ]
   },
   {
@@ -744,35 +744,26 @@
     "\n",
     "4. Plot the function `f(x)` and its Fourier series."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
