--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -26,7 +26,7 @@
     "    * [Numerical approximations for equations 39 and 40](#sec2.2)\n",
     "\n",
     "\n",
-    "* [Exercise 30](#ex30)"
+    "* [Exercise](#exercise)"
    ]
   },
   {
@@ -313,11 +313,61 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In practical situations, equation [45](#eq45) is written in matrix notation, as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq47'></a>\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{G} = \\mathbf{W} \\, \\mathbf{g} \\quad, \\tag{47}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{W}$ is an $N \\times N$ complex matrix called *Discrete Fourier Transform Matrix* or simply *DFT matrix*, with element $nk$ given by $w_{nk} = s \\, e^{ -i \\, 2 \\pi \\, n \\, k \\, / N}$, and $s$ is a scalar factor that can assumes the three possible values: $1$, $\\frac{1}{N}$ or $\\frac{1}{\\sqrt{N}}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In practical situations, equation [46](#eq46) is written in matrix notation, as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq48'></a>\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{g} = \\mathbf{W}^{H} \\, \\mathbf{G} \\quad, \\tag{48}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{W}^{H}$ is the [conjugate transpose](https://en.wikipedia.org/wiki/Conjugate_transpose) of $\\mathbf{W}$ ([equation 47](#eq47)), with element $kn$ given by $w_{kn} = s \\, e^{\\, i \\, 2 \\pi \\, n \\, k \\, / N}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "<a id='ex30'></a>\n",
+    "<a id='exercise'></a>\n",
     "\n",
     "### Exercise"
    ]
@@ -326,42 +376,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implement the Discrete Fourier Transform ([equations 45](#eq45)) and the Discrete Inverse Fourier Transform ([equations 46](#eq46)). Compare the results with the [`scipy.fftpack.fft`](http://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.fft.html) and [`scipy.fftpack.ifft`](http://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft.html). Hint: take a look at [Jake VanderPlas' blog](https://jakevdp.github.io/blog/2013/08/28/understanding-the-fft/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use the functions you have created above to compute the first derivative of the total-field anomaly computed by using the notebook [synthetic_mag_data_fatiando](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/synthetic_magnetic_data/synthetic_mag_data_fatiando.ipynb). The total-field anomaly profile is saved in the txt file `tfanomaly_profile.txt`, in the directory `synthetic_magnetic_data`. Hint: Take a look at the end of the notebook [synthetic_mag_data_fatiando](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/synthetic_magnetic_data/synthetic_mag_data_fatiando.ipynb)."
+    "1. In your `my_function.py` file, create a function called `DFT_matrix`. The function must receive the positive integer $N$ and a string called `scale` representing the scale factor $s$. This string may assume three possible values: `None`, `'n'` or `'sqrtn'`. Your function must define the scale factor $s$ based on the string `scale`. Hint: the DFT matrix and can be defined by using `outer(n, n)`, where `n` is a vector with elements varying from `0` to `N-1`.\n",
+    "2. In your file `test_my_function.py`, create two tests for the function `DFT_matrix`. One test must compare the result produced by `DFT_matrix` and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`scipy.linalg.dft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.dft.html).\n",
+    "3. In your `my_function.py` file, create a function called `fft1D`. The function must receive the data vector $\\mathbf{g}$ and return its Discrete Fourier Transform. This function must create the DFT matrix $\\mathbf{W}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`).\n",
+    "4. In your file `test_my_function.py`, create one test for the function `fft1D`. This test must compare the result produced by `fft1D` and the result produced by the routine [`scipy.fftpack.fft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.fft.html#scipy.fftpack.fft).\n",
+    "5. In your `my_function.py` file, create a function called `ifft1D`. The function must receive the complex vector $\\mathbf{G}$ and return its Discrete Inverse Fourier Transform. This function must create the DFT matrix $\\mathbf{W}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`). Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conjugate(A).T`.\n",
+    "6. In your file `test_my_function.py`, create one test for the function `ifft1D`. This test must compare the result produced by `ifft1D` and the result produced by the routine [`scipy.fftpack.ifft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft.html)."
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
