--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -43,7 +43,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "M = \\sum_{\\beta = 1}^{r} M_{\\alpha}\n",
+    "M = \\sum_{\\beta = 1}^{r} M_{\\beta}\n",
     "$$"
    ]
   },
@@ -318,8 +318,9 @@
     "            beta1 = \n",
     "            beta2 = \n",
     "            for beta = 1:r\n",
-    "                C[alpha1:alpha2, gamma1:gamma2] += matmat(A[alpha1:alpha2, beta1:beta2], \n",
-    "                                                          B[beta1:beta2, gamma1:gamma2])\n",
+    "                C[alpha1:alpha2, gamma1:gamma2] \n",
+    "                += matmat(A[alpha1:alpha2, beta1:beta2], \n",
+    "                          B[beta1:beta2, gamma1:gamma2])\n",
     "                beta1 = \n",
     "                beta2 = \n",
     "            gamma1 = \n",
