--- a/Content/fourier_1D_1.ipynb
+++ b/Content/fourier_1D_1.ipynb
@@ -702,7 +702,7 @@
    "source": [
     "<a id='ex-extra-intro1'></a>\n",
     "\n",
-    "### Exercise (extra)"
+    "### Exercise"
    ]
   },
   {
