--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\mathbf{A}$ be a $N \\times M$ matrix and $\\mathbf{x}$ be a $M \\times 1$ vector. $\\mathbf{A}$ can be represented by using a *row partition* or by a *colunm partition* as follows:"
+    "Let $\\mathbf{A}$ be a $N \\times M$ matrix and $\\mathbf{x}$ be a $M \\times 1$ vector. $\\mathbf{A}$ can be represented by using a *row partition* or by a *column partition* as follows:"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{A}[i,:]$, $i = 1, ..., N$, is a $1 \\times M$ vector representing the $i$th row of $\\mathbf{A}$ and $\\mathbf{A}[:,j]$, $j = 1, ..., M$, is a $N \\times 1$ vector representing the $j$th colunm of $\\mathbf{A}$."
+    "where $\\mathbf{A}[i,:]$, $i = 1, ..., N$, is a $1 \\times M$ vector representing the $i$th row of $\\mathbf{A}$ and $\\mathbf{A}[:,j]$, $j = 1, ..., M$, is a $N \\times 1$ vector representing the $j$th column of $\\mathbf{A}$."
    ]
   },
   {
