last part of Fourier 1D

--- a/Content/fourier_1D_3.ipynb
+++ b/Content/fourier_1D_3.ipynb
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "is the fundamental frequency,"
+    "is the **fundamental frequency**,"
    ]
   },
   {
