--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and $f_{n} = n \\, f_{0}$. [Equation 38b](#eq38b) represents a function evaluated at discrete values of the variable $f_{n}$. Notice that $f_{0}$ represents the increment in the variable $f_{n}$. Moreover, $n \\to \\pm \\infty \\rightarrow f_{n} \\to \\pm \\infty$. By letting $T_{0} \\rightarrow \\infty$, $f_{0}$ tends to an infinitesimal $d \\, f$, $f_{n}$ tends to a continuous variable and the functions $g(y)$ ([equation 38a](#eq38a)) and $G(f_{n})$ ([equation 38b](#eq38b)) become"
+    "and $f_{n} = n \\, f_{0}$. [Equation 38b](#eq38b) represents a function evaluated at discrete values of the variable $f_{n}$. Notice that $f_{0}$ represents the increment in the variable $f_{n}$. Moreover, $n \\to \\pm \\infty$, $f_{n} \\to \\pm \\infty$. By letting $T_{0} \\rightarrow \\infty$, $f_{0}$ tends to an infinitesimal $df$, $f_{n}$ tends to a continuous variable and the functions $g(y)$ ([equation 38a](#eq38a)) and $G(f_{n})$ ([equation 38b](#eq38b)) become"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "\n",
     "$$\n",
     "g(y) = \\int \\limits_{-\\infty}^{\\infty} \n",
-    "G(f) \\, e^{\\, i \\, 2 \\, \\pi \\, f \\, y} \\; d \\, f \\quad , \\tag{39}\n",
+    "G(f) \\, e^{\\, i \\, 2 \\, \\pi \\, f \\, y} \\; d f \\quad , \\tag{39}\n",
     "$$"
    ]
   },
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Equations [39](#eq39) and [40](#eq40) are known as **Inverse Fourier Transform** and **Fourier Transform**, respectively. By considering that $y$ is a length/time, we say that $g(y)$ is in space/time domain and $G(f)$ is in Fourier domain. If $y$ is measured in seconds, then $f$ is in cycles per second, or Hertz (the unit of frequency). If $y$ is measured in meters, $f$ cycles per meter, or inverse wavelength. For many purposes it is useful to think of $g(y)$ and $G(f)$ as being two different representations of the same function.\n",
+    "Equations [39](#eq39) and [40](#eq40) are known as **Inverse Fourier Transform** and **Fourier Transform**, respectively. By considering that $y$ is length/time, we say that $g(y)$ is in space/time domain and $G(f)$ is in Fourier domain. If $y$ is measured in seconds, then $f$ is in cycles per second, or Hertz (the unit of frequency). If $y$ is measured in meters, $f$ cycles per meter, or inverse wavelength. For many purposes it is useful to think of $g(y)$ and $G(f)$ as being two different representations of the same function.\n",
     "\n",
     "\n",
     "Notice that equations [39](#eq39) and [40](#eq40) deal with continuous functions that are integrated from $-\\infty$ to $\\infty$. In practical situations, we want to calculate the Fourier Transform $G(f)$ ([equation 40](#eq40)) of a function $g(y)$ that is evaluated on a discrete set of points $y$. In this case, we solve [equation 40](#eq40) numerically in order to obtain estimates of $G(f)$ at a discrete set of points $f$. These discrete forms of equations [39](#eq39) and [40](#eq40) are called **Discrete Inverse Fourier Transform** and **Discrete Fourier Transform**, respectively."
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider the Fourier Transform $G(f)$ evaluated at evenly spaced at points $f_{n}$ given by:"
+    "Let's consider the Fourier Transform $G(f)$ evaluated at evenly spaced points $f_{n}$ given by:"
    ]
   },
   {
@@ -289,14 +289,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In [equation 43](#eq43), $n$ varies from $−\\frac{N}{2}$ to $\\frac{N}{2}$. Notice that $G_{n}$ ([equation 45](#eq45)) is periodic $n$, with period $N$. Therefore, $G_{-N/2} = G_{N/2}$ or, in a general form, $G_{n} = G_{n+N}$, $n = 1, 2, \\dots$. With this conversion in mind, one generally lets $n$ ([equation 45](#eq45)) varies from $0$ to $N − 1$ (one complete period). Then $n$ and $k$ vary exactly over the same range. When this convention is followed, you must remember that zero frequency corresponds to $n = 0$, positive frequencies $0 < f < f_{c}$ correspond to values $1 \\le n \\le (N/2) − 1$, and negative frequencies $−f_{c} < f < 0$ correspond to $(N/2) + 1 \\le n \\le N−1$. The value $n = N/2$ corresponds to both $G_{-N/2}$ and $G_{N/2}$ (Press et al., 1992)."
+    "Similarly to the approximation defined by equation [44](#ep44), we can approximate the integral [39](#eq39) as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, the **Discrete Inverse Fourier Transform** is given by:"
+    "$$\n",
+    "\\begin{split}\n",
+    "g(y_{k}) &\\approx \\sum \\limits_{n = -\\frac{N}{2}}^{\\frac{N}{2} - 1} \n",
+    "G(f_{n}) \\, e^{\\, i \\, 2 \\, \\pi \\, f_{n} \\, y_{k}} \\; \\Delta f \\\\\n",
+    "&\\approx \\sum \\limits_{n = -\\frac{N}{2}}^{\\frac{N}{2} - 1} \n",
+    "G(f_{n}) \\, e^{\\, i \\, 2 \\, \\pi \\, \\left( \\frac{n}{N \\Delta y} \\right) \\, \\left( k \\, \\Delta y\\right)} \n",
+    "\\frac{1}{N \\Delta y} \\\\\n",
+    "&\\approx \\frac{1}{N} \\, \\sum \\limits_{n = -\\frac{N}{2}}^{\\frac{N}{2} - 1} \n",
+    "\\frac{G(f_{n})}{\\Delta y} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N}\n",
+    "\\end{split} \\quad .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In [equation 43](#eq43), $n$ varies from $−\\frac{N}{2}$ to $\\frac{N}{2}$. Notice that $G_{n}$ ([equation 45](#eq45)) is periodic $n$, with period $N$. Therefore, $G_{-N/2} = G_{N/2}$ or, in a general form, $G_{n} = G_{n+N}$, $n = 1, 2, \\dots$. With this conversion in mind, one generally lets $n$ varies from $0$ to $N − 1$ (one complete period). Then $n$ and $k$ vary exactly over the same range. When this convention is followed, you must remember that zero frequency corresponds to $n = 0$, positive frequencies $0 < f < f_{c}$ correspond to values $1 \\le n \\le (N/2) − 1$, and negative frequencies $−f_{c} < f < 0$ correspond to $(N/2) \\le n \\le N−1$. The value $n = N/2$ corresponds to both $G_{-N/2}$ and $G_{N/2}$ (Press et al., 1992)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using this approximation, the **Discrete Inverse Fourier Transform** can be written as follows:"
    ]
   },
   {
@@ -306,7 +330,7 @@
     "<a id='eq46'></a>\n",
     "\n",
     "$$\n",
-    "g_{k} \\equiv \\frac{1}{N} \\sum \\limits_{k = 0}^{N-1} \n",
+    "g_{k} \\equiv \\frac{1}{N} \\sum \\limits_{n = 0}^{N-1} \n",
     "G_{n} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad . \\tag{46}\n",
     "$$"
    ]
@@ -315,7 +339,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practical situations, equation [45](#eq45) is written in matrix notation, as follows:"
+    "<a id='sec2.3'></a>\n",
+    "### Discrete Fourier Transform in matrix notation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The summations defined by equations [45](#eq45) and [46](#eq46) depend, respectively, on the following complex exponentials:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "w_{nk} = e^{\\, -i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "w_{kn} = w_{nk}^{\\ast} = e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where \" $^{\\ast}$ \" denotes the [complex conjugate](https://en.wikipedia.org/wiki/Complex_conjugate)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In practical situations, the Discrete Fourier Transform ([equation 45](#eq45)) is written in matrix notation, as follows:"
    ]
   },
   {
@@ -333,14 +404,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{W}$ is an $N \\times N$ complex matrix called *Discrete Fourier Transform Matrix* or simply *DFT matrix*, with element $nk$ given by $w_{nk} = s \\, e^{ -i \\, 2 \\pi \\, n \\, k \\, / N}$, and $s$ is a scalar factor that can assumes the three possible values: $1$, $\\frac{1}{N}$ or $\\frac{1}{\\sqrt{N}}$."
+    "where $\\mathbf{W}$ is an $N \\times N$ complex matrix called *Discrete Fourier Transform Matrix* or simply *DFT matrix*, with element $nk$ given by $w_{nk} = e^{ -i \\, 2 \\pi \\, n \\, k \\, / N}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practical situations, equation [46](#eq46) is written in matrix notation, as follows:"
+    "It can be show that:\n",
+    "\n",
+    "* $\\mathbf{W}^{\\ast} = \\mathbf{W}^{H}$\n",
+    "\n",
+    "* $\\mathbf{W}^{-1} = \\frac{1}{N} \\, \\mathbf{W}^{\\ast}$\n",
+    "\n",
+    "* $N \\mathbf{I} = \\mathbf{W}^{H} = \\mathbf{W}^{H} \\mathbf{W}$\n",
+    "\n",
+    "where $\\mathbf{W}^{\\ast}$ is the complex conjugate without transposition and $\\mathbf{W}^{H}$ is the conjugate transpose."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In practical situations, the Discrete Inverse Fourier Transform ([equation 46](#eq46)) is written in matrix notation, as follows:"
    ]
   },
   {
@@ -350,7 +436,7 @@
     "<a id='eq48'></a>\n",
     "\n",
     "$$\n",
-    "\\mathbf{g} = \\mathbf{W}^{H} \\, \\mathbf{G} \\quad, \\tag{48}\n",
+    "\\mathbf{g} = \\frac{1}{N} \\, \\mathbf{W}^{H} \\, \\mathbf{G} \\quad, \\tag{48}\n",
     "$$"
    ]
   },
@@ -358,7 +444,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{W}^{H}$ is the [conjugate transpose](https://en.wikipedia.org/wiki/Conjugate_transpose) of $\\mathbf{W}$ ([equation 47](#eq47)), with element $kn$ given by $w_{kn} = s \\, e^{\\, i \\, 2 \\pi \\, n \\, k \\, / N}$."
+    "where $\\mathbf{W}^{H}$ has the $kn$ element given by $w_{kn} = e^{\\, i \\, 2 \\pi \\, n \\, k \\, / N}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that, to compute the Discrete Inverse Fourier Transform ([equation 48](#eq48)), it is necessary to multiple by the scale factor $1 / N$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.linalg import dft\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = dft(n=10, scale='sqrtn')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.dot(W, np.conjugate(W)), np.identity(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = dft(n=10, scale='n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.dot(W, np.conjugate(W)), 0.1*np.identity(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = dft(n=10) # scale=None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.dot(W, np.conjugate(W)), 10*np.identity(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.conjugate(W), np.conjugate(W).T)"
    ]
   },
   {
@@ -383,6 +593,92 @@
     "5. In your `my_function.py` file, create a function called `ifft1D`. The function must receive the complex vector $\\mathbf{G}$ and return its Discrete Inverse Fourier Transform. This function must create the DFT matrix $\\mathbf{W}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`). Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conjugate(A).T`.\n",
     "6. In your file `test_my_function.py`, create one test for the function `ifft1D`. This test must compare the result produced by `ifft1D` and the result produced by the routine [`scipy.fftpack.ifft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft.html)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = dft(N, scale=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.dot(W, np.conjugate(W).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7., -0., -0.,  0.,  0.,  0.,  0.],\n",
+       "       [-0.,  7., -0., -0.,  0., -0.,  0.],\n",
+       "       [-0., -0.,  7., -0.,  0., -0.,  0.],\n",
+       "       [ 0., -0., -0.,  7.,  0., -0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  7., -0.,  0.],\n",
+       "       [ 0., -0., -0., -0., -0.,  7., -0.],\n",
+       "       [ 0.,  0.,  0.,  0., -0., -0.,  7.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(A.real, decimals=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0., -0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0., -0.,  0., -0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0., -0.,  0.],\n",
+       "       [-0., -0., -0.,  0.,  0.,  0.,  0.],\n",
+       "       [-0.,  0., -0., -0.,  0.,  0.,  0.],\n",
+       "       [-0., -0.,  0.,  0., -0.,  0., -0.],\n",
+       "       [-0., -0., -0., -0., -0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(A.imag, decimals=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
