equations for fft2d and ifft2d

--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -230,7 +230,7 @@
     "<a id='eq43'></a>\n",
     "\n",
     "$$\n",
-    "f_{n} = \\frac{n}{N \\Delta y} \\: , \\quad n = -\\frac{N}{2}, \\dots , \\frac{N}{2} \\: . \\tag{43}\n",
+    "f_{n} = \\frac{n}{N \\Delta y} \\: , \\quad n = -\\frac{N}{2}, \\dots , \\frac{N}{2} - 1 \\: . \\tag{43}\n",
     "$$"
    ]
   },
@@ -296,6 +296,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='eq46a'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{split}\n",
     "g(y_{k}) &\\approx \\sum \\limits_{n = -\\frac{N}{2}}^{\\frac{N}{2} - 1} \n",
@@ -305,7 +307,7 @@
     "\\frac{1}{N \\Delta y} \\\\\n",
     "&\\approx \\frac{1}{N} \\, \\sum \\limits_{n = -\\frac{N}{2}}^{\\frac{N}{2} - 1} \n",
     "\\frac{G(f_{n})}{\\Delta y} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N}\n",
-    "\\end{split} \\quad .\n",
+    "\\end{split} \\quad . \\tag{46a}\n",
     "$$"
    ]
   },
@@ -409,18 +411,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the approximation and the considerations given above, the **Discrete Inverse Fourier Transform** can be written as follows:"
+    "Based on the approximation defined by [equation 46a](#eq46a) and the considerations given above, the **Discrete Inverse Fourier Transform** can be written as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq46'></a>\n",
+    "<a id='eq46b'></a>\n",
     "\n",
     "$$\n",
     "g_{k} \\equiv \\frac{1}{N} \\sum \\limits_{n = 0}^{N-1} \n",
-    "G_{n} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad . \\tag{46}\n",
+    "G_{n} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad . \\tag{46b}\n",
     "$$"
    ]
   },
@@ -443,8 +445,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='eq48a'></a>\n",
+    "\n",
     "$$\n",
-    "w_{nk} = e^{\\, -i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N}\n",
+    "w^{nk}_{N} = e^{\\, -i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\tag{48a}\n",
     "$$"
    ]
   },
@@ -459,8 +463,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='eq48b'></a>\n",
+    "\n",
     "$$\n",
-    "w_{kn} = w_{nk}^{\\ast} = e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad ,\n",
+    "\\tilde{w}^{nk}_{N} = e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad , \\tag{48b}\n",
     "$$"
    ]
   },
@@ -468,7 +474,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where \" $^{\\ast}$ \" denotes the [complex conjugate](https://en.wikipedia.org/wiki/Complex_conjugate)."
+    "where \" $\\tilde{}$ \" denotes the [complex conjugate](https://en.wikipedia.org/wiki/Complex_conjugate) and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq48c'></a>\n",
+    "\n",
+    "$$\n",
+    "w_{N} = e^{-i \\, 2 \\, \\pi \\, / \\, N} \\quad . \\tag{48c}\n",
+    "$$"
    ]
   },
   {
@@ -482,10 +499,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq47'></a>\n",
+    "<a id='eq49'></a>\n",
     "\n",
     "$$\n",
-    "\\mathbf{G} = \\mathbf{W} \\, \\mathbf{g} \\quad, \\tag{47}\n",
+    "\\mathbf{G} = \\mathbf{W}_{N} \\, \\mathbf{g} \\quad, \\tag{49}\n",
     "$$"
    ]
   },
@@ -493,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{W}$ is an $N \\times N$ complex matrix called *Discrete Fourier Transform Matrix* or simply *DFT matrix*, with element $nk$ given by $w_{nk} = e^{ -i \\, 2 \\pi \\, n \\, k \\, / N}$."
+    "where $\\mathbf{W}_{N}$ is an $N \\times N$ complex matrix called *Discrete Fourier Transform Matrix* or simply *DFT matrix*, with element $nk$ given by $w^{nk}_{N}$ ([equation 48a](#eq48a))."
    ]
   },
   {
@@ -502,13 +519,13 @@
    "source": [
     "It can be show that:\n",
     "\n",
-    "* $\\mathbf{W}^{\\ast} = \\mathbf{W}^{H}$\n",
+    "* $\\mathbf{W}^{\\ast}_{N} = \\mathbf{W}^{H}_{N}$\n",
     "\n",
-    "* $\\mathbf{W}^{-1} = \\frac{1}{N} \\, \\mathbf{W}^{\\ast}$\n",
+    "* $\\mathbf{W}^{-1}_{N} = \\frac{1}{N} \\, \\mathbf{W}^{\\ast}_{N}$\n",
     "\n",
-    "* $N \\mathbf{I} = \\mathbf{W}^{H} \\mathbf{W}$\n",
+    "* $N \\, \\mathbf{I} = \\mathbf{W}^{H}_{N} \\mathbf{W}_{N}$\n",
     "\n",
-    "where $\\mathbf{W}^{\\ast}$ is the complex conjugate without transposition and $\\mathbf{W}^{H}$ is the conjugate transpose."
+    "where $\\mathbf{W}^{\\ast}_{N}$ is the complex conjugate without transposition and $\\mathbf{W}^{H}_{N}$ is the conjugate transpose."
    ]
   },
   {
@@ -522,10 +539,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq48'></a>\n",
+    "<a id='eq50'></a>\n",
     "\n",
     "$$\n",
-    "\\mathbf{g} = \\frac{1}{N} \\, \\mathbf{W}^{H} \\, \\mathbf{G} \\quad, \\tag{48}\n",
+    "\\mathbf{g} = \\frac{1}{N} \\, \\mathbf{W}^{H} \\, \\mathbf{G} \\quad, \\tag{50}\n",
     "$$"
    ]
   },
@@ -533,14 +550,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{W}^{H}$ has the $kn$ element given by $w_{kn} = e^{\\, i \\, 2 \\pi \\, n \\, k \\, / N}$."
+    "where $\\mathbf{W}^{H}_{N}$ has the $kn$ element given by $\\tilde{w}^{nk}_{N}$ ([equation 48b](#eq48b))."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, to compute the Discrete Inverse Fourier Transform ([equation 48](#eq48)), it is necessary to multiple by the scale factor $1 / N$."
+    "Notice that, to compute the Discrete Inverse Fourier Transform ([equation 50](#eq50)), it is necessary to multiple by the scale factor $1 / N$."
    ]
   },
   {
