--- a/Content/fourier_2D.ipynb
+++ b/Content/fourier_2D.ipynb
@@ -18,11 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq49'></a>\n",
+    "<a id='eq51'></a>\n",
     "\n",
     "$$\n",
     "G(u, v) = \\int \\limits_{-\\infty}^{\\infty} \\int \\limits_{-\\infty}^{\\infty} \n",
-    "g(x, y) \\, e^{\\, -i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; dx \\, dy \\tag{49}\n",
+    "g(x, y) \\, e^{\\, -i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; dx \\, dy \\tag{51}\n",
     "$$"
    ]
   },
@@ -37,11 +37,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq50'></a>\n",
+    "<a id='eq52'></a>\n",
     "\n",
     "$$\n",
     "g(x, y) = \\int \\limits_{-\\infty}^{\\infty} \\int \\limits_{-\\infty}^{\\infty} \n",
-    "G(u, v) \\, e^{\\, i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; du \\, dv  \\quad ,\\tag{50}\n",
+    "G(u, v) \\, e^{\\, i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; du \\, dv  \\quad ,\\tag{52}\n",
     "$$"
    ]
   },
@@ -53,128 +53,91 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "<a id='exercise'></a>\n",
-    "\n",
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. In your `my_function.py` file, create a function called `DFT_matrix`. The function must receive the positive integer $N$ and a string called `scale` representing the scale factor $s$. This string may assume three possible values: `None`, `'n'` or `'sqrtn'`. Your function must define the scale factor $s$ based on the string `scale`. Hint: the DFT matrix and can be defined by using `outer(n, n)`, where `n` is a vector with elements varying from `0` to `N-1`.\n",
-    "2. In your file `test_my_function.py`, create three tests for the function `DFT_matrix`. One test must compare the result produced by `DFT_matrix` and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`scipy.linalg.dft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.dft.html). The last test must verify that $\\mathbf{W}$ satisfy the following conditions: $\\mathbf{W}^{\\ast} = \\mathbf{W}^{H}$, $\\mathbf{W}^{-1} = \\frac{1}{N} \\, \\mathbf{W}^{\\ast}$ and $N \\mathbf{I} = \\mathbf{W}^{H} \\mathbf{W}$.\n",
-    "3. In your `my_function.py` file, create a function called `fft1D`. The function must receive the data vector $\\mathbf{g}$ and return its Discrete Fourier Transform. This function must create the DFT matrix $\\mathbf{W}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`).\n",
-    "4. In your file `test_my_function.py`, create one test for the function `fft1D`. This test must compare the result produced by `fft1D` and the result produced by the routine [`scipy.fftpack.fft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.fft.html#scipy.fftpack.fft).\n",
-    "5. In your `my_function.py` file, create a function called `ifft1D`. The function must receive the complex vector $\\mathbf{G}$ and return its Discrete Inverse Fourier Transform. This function must create the DFT matrix $\\mathbf{W}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`). Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conjugate(A).T`.\n",
-    "6. In your file `test_my_function.py`, create one test for the function `ifft1D`. This test must compare the result produced by `ifft1D` and the result produced by the routine [`scipy.fftpack.ifft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft.html)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 7"
+    "from scipy.linalg import dft\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = dft(N, scale=None)"
+    "from numpy.linalg import multi_dot as mdot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.dot(W, np.conjugate(W).T)"
+    "from scipy.fftpack import fft2, ifft2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 7., -0., -0.,  0.,  0.,  0.,  0.],\n",
-       "       [-0.,  7., -0., -0.,  0., -0.,  0.],\n",
-       "       [-0., -0.,  7., -0.,  0., -0.,  0.],\n",
-       "       [ 0., -0., -0.,  7.,  0., -0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  7., -0.,  0.],\n",
-       "       [ 0., -0., -0., -0., -0.,  7., -0.],\n",
-       "       [ 0.,  0.,  0.,  0., -0., -0.,  7.]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.round(A.real, decimals=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0., -0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0., -0.,  0., -0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0., -0.,  0.],\n",
-       "       [-0., -0., -0.,  0.,  0.,  0.,  0.],\n",
-       "       [-0.,  0., -0., -0.,  0.,  0.,  0.],\n",
-       "       [-0., -0.,  0.,  0., -0.,  0., -0.],\n",
-       "       [-0., -0., -0., -0., -0.,  0.,  0.]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.round(A.imag, decimals=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 10"
+    "N = 7\n",
+    "M = 11"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = np.arange(N)"
+    "WN = dft(N, scale=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WM = dft(M, scale=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.random.rand(N, M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FTA = fft2(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FTA2 = mdot([WN, A, WM])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,13 +146,51 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.allclose(np.exp(-1j*2*np.pi*np.outer(n,n)/N), dft(N, scale=None))"
+    "np.allclose(FTA, FTA2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IFTA = ifft2(FTA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IFTA2 = (1/(N*M))*mdot([np.conjugate(WN), FTA2, np.conjugate(WM)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(IFTA, IFTA2)"
    ]
   },
   {
